--- a/index.html
+++ b/index.html
@@ -403,13 +403,13 @@
             <section class="team-section" id="section_7">
                 <h2>Meet Our Team</h2>
                 <div class="team-member">
-                    <img src="images/team.jpeg" alt="Team Member 1">
+                    <img src="images/team2.jpeg" alt="Team Member 1">
                     <!-- <h3>John Doe</h3>
                     <p>Web Developer</p> -->
                 </div>
 
                 <div class="team-member">
-                    <img src="images/team2.jpeg" alt="Team Member 1">
+                    <img src="images/foto4.jpeg" alt="Team Member 1">
                     <!-- <h3>John Doe</h3>
                     <p>Web Developer</p> -->
                 </div>
